# austimes-tools

./: README.md  austimes.py  pyproject.toml
data/luto/20241010/: S10_cp150_bf1bn_hr2x_capConOn_gcmGFDLESM2Mrcp26_AUS.xlsx  S10_cp150_bf1bn_hr5x_capConOn_gcmGFDLESM2Mrcp26_AUS.xlsx  S11_cp200_bf1bn_hr2x_capConOn_gcmGFDLESM2Mrcp26_AUS.xlsx  S11_cp200_bf1bn_hr5x_capConOn_gcmGFDLESM2Mrcp26_AUS.xlsx  S12_cp250_bf1bn_hr2x_capConOn_gcmGFDLESM2Mrcp26_AUS.xlsx  S12_cp250_bf1bn_hr5x_capConOn_gcmGFDLESM2Mrcp26_AUS.xlsx  S13_cp300_bf1bn_hr2x_capConOn_gcmGFDLESM2Mrcp26_AUS.xlsx  S13_cp300_bf1bn_hr5x_capConOn_gcmGFDLESM2Mrcp26_AUS.xlsx  S14_cp10_bf1bn_hr2x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S14_cp10_bf1bn_hr5x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S15_cp20_bf1bn_hr2x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S15_cp20_bf1bn_hr5x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S16_cp30_bf1bn_hr2x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S16_cp30_bf1bn_hr5x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S17_cp40_bf1bn_hr2x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S17_cp40_bf1bn_hr5x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S18_cp50_bf1bn_hr2x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S18_cp50_bf1bn_hr5x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S19_cp60_bf1bn_hr2x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S19_cp60_bf1bn_hr5x_capConOff_gcmGFDLESM2Mrcp26_AUS.xlsx  S1_cp10_bf1bn_hr2x_capConOn_gcmGFDLESM2Mrcp26_AUS.xlsx  (+31 more)
data/msm22-output-templates/: FE_template.xlsx
src/austimes_tools/: calculate_fuel_switching.py  cli.py  create_msm22_csvs.py  load_luto_data.py  merge_appdata_json_files.py  pivot_csv.py  pivot_year.py
