[project]
name = "austimes-tools"
version = "0.1.0"
description = "A collection of data processing utilities for Austimes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "fastexcel>=0.12.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.14.0",
    "rich-click>=1.8.4",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
austimes-tools = "austimes_tools.cli:cli"
